<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_image"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:padding="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_app"
        tools:layout_editor_absoluteX="10dp">

        <TextView
            android:id="@+id/tv_weather_forecast"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/weather_forecast_fit_hau"
            android:textColor="@color/text_color_primary"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintTop_toTopOf="parent"
            tools:layout_editor_absoluteX="10dp" />

        <EditText
            android:id="@+id/et_input_city"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:autofillHints=""
            android:hint="@string/enter_city_name"
            android:inputType="text"
            android:textColor="@color/text_color_primary"
            android:textSize="16sp"
            app:layout_constraintTop_toBottomOf="@+id/tv_weather_forecast"
            tools:ignore="LabelFor" />

        <EditText
            android:id="@+id/et_input_country"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:autofillHints=""
            android:hint="@string/enter_country_name"
            android:inputType="text"
            android:textColor="@color/text_color_primary"
            android:textSize="16sp"
            app:layout_constraintTop_toBottomOf="@+id/et_input_city"
            tools:ignore="LabelFor" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_get_weather"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:backgroundTint="@color/button_background_color"
            android:text="@string/get"
            android:textColor="@color/button_text_color"
            app:layout_constraintTop_toBottomOf="@+id/et_input_country"
            tools:ignore="LabelFor"
            tools:layout_editor_absoluteX="10dp" />

        <TextView
            android:id="@+id/tv_weather_result"
            android:layout_width="match_parent"
            android:layout_height="180dp"
            android:layout_marginBottom="10dp"
            android:textColor="@color/text_color_primary"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@+id/btn_get_weather"
            tools:layout_editor_absoluteX="10dp" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_forecast"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintBottom_toTopOf="@+id/textView2"
            app:layout_constraintTop_toBottomOf="@+id/tv_weather_result"
            tools:layout_editor_absoluteX="10dp" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/faculty_of_information_technology_hau_2024"
            android:textColor="@color/text_color_primary"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            tools:layout_editor_absoluteX="10dp" />
    </androidx.constraintlayout.widget.ConstraintLayout>
    <TextView
        android:id="@+id/tv_app"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/fit_hau_weather_forecast"
        android:textColor="@color/text_color_primary"
        android:background="@color/textview_background_primary"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent"
        android:paddingStart="10dp"
        tools:layout_editor_absoluteX="10dp" />



</androidx.constraintlayout.widget.ConstraintLayout>
